<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/header_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_regisrt"
        android:textColor="@color/red"
        android:fontFamily="sans-serif-black"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/surname"
        android:maxLength="13"
        android:inputType="textPersonName">
    </EditText>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:maxLength="13"
        android:hint="@string/name"
        android:inputType="textPersonName">
    </EditText>

    <EditText
        android:id="@+id/lastname"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/lastname"
        android:maxLength="13"
        android:inputType="textPersonName">
    </EditText>

    <EditText
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/mail"
        android:maxLength="64"
        android:inputType="textEmailAddress">
    </EditText>

    <EditText
        android:id="@+id/registration_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/password"
        android:maxLength="30"
        android:inputType="textPassword">
    </EditText>

    <TextView
        android:id="@+id/error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:fontFamily="sans-serif-black"
        android:textSize="6pt"
        android:text="" />


</LinearLayout>